src/objects/hed__Term__c.object
<CustomObject>
    <description>Unit of time in which academic activities are taking place.</description>
    <fields>
        <fullName>Academic_Year__c</fullName>
        <label>Academic Year</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accepted_goal_NEW__c</fullName>
        <formula>Enrollment_Goal_NEW__c / Accepted_yield_rate_NEW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accepted goal - NEW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accepted_goal_PSEO__c</fullName>
        <formula>Enrollment_Goal_PSEO__c / Accepted_yield_rate_PSEO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accepted goal - PSEO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accepted_goal_Prev_PSEO__c</fullName>
        <formula>Enrollment_Goal_Prev_PSEO__c / Accepted_yield_rate_Prev_PSEO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accepted goal - Previous PSEO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accepted_goal_TRANSFER__c</fullName>
        <formula>Enrollment_Goal_TRANSFER__c / Accepted_yield_rate_TRANSFER__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accepted goal - TRANSFER</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accepted_yield_rate_NEW__c</fullName>
        <label>Accepted yield rate - NEW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Accepted_yield_rate_PSEO__c</fullName>
        <label>Accepted yield rate - PSEO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Accepted_yield_rate_Prev_PSEO__c</fullName>
        <label>Accepted yield rate - Previous PSEO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Accepted_yield_rate_TRANSFER__c</fullName>
        <label>Accepted yield rate - TRANSFER</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Applied_goal_NEW__c</fullName>
        <formula>Enrollment_Goal_NEW__c / Applied_yield_rate_NEW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applied goal - NEW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Applied_goal_PSEO__c</fullName>
        <formula>Enrollment_Goal_PSEO__c / Applied_yield_rate_PSEO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applied goal - PSEO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Applied_goal_Prev_PSEO__c</fullName>
        <formula>Enrollment_Goal_Prev_PSEO__c / Applied_yield_rate_Prev_PSEO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applied goal - Previous PSEO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Applied_goal_TRANSFER__c</fullName>
        <formula>Enrollment_Goal_TRANSFER__c / Applied_yield_rate_TRANSFER__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applied goal - TRANSFER</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Applied_yield_rate_NEW__c</fullName>
        <label>Applied yield rate - NEW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Applied_yield_rate_PSEO__c</fullName>
        <label>Applied yield rate - PSEO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Applied_yield_rate_Prev_PSEO__c</fullName>
        <label>Applied yield rate - Previous PSEO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Applied_yield_rate_TRANSFER__c</fullName>
        <label>Applied yield rate - TRANSFER</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Confirmed_Goal_NEW__c</fullName>
        <formula>Enrollment_Goal_NEW__c / Confirmed_yield_rate_NEW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Confirmed Goal - NEW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Confirmed_Goal_PSEO__c</fullName>
        <formula>Enrollment_Goal_PSEO__c / Confirmed_yield_rate_PSEO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Confirmed Goal - PSEO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Confirmed_Goal_Prev_PSEO__c</fullName>
        <formula>Enrollment_Goal_Prev_PSEO__c / Confirmed_yield_rate_Prev_PSEO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Confirmed Goal - Previous PSEO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Confirmed_Goal_TRANSFER__c</fullName>
        <formula>Enrollment_Goal_TRANSFER__c / Confirmed_yield_rate_TRANSFER__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Confirmed Goal - TRANSFER</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Confirmed_yield_rate_NEW__c</fullName>
        <label>Confirmed yield rate - NEW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Confirmed_yield_rate_PSEO__c</fullName>
        <label>Confirmed yield rate - PSEO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Confirmed_yield_rate_Prev_PSEO__c</fullName>
        <label>Confirmed yield rate - Previous PSEO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Confirmed_yield_rate_TRANSFER__c</fullName>
        <label>Confirmed yield rate - TRANSFER</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Enrollment_Goal_NEW__c</fullName>
        <label>Enrollment Goal - NEW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enrollment_Goal_PSEO__c</fullName>
        <label>Enrollment Goal - PSEO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enrollment_Goal_Prev_PSEO__c</fullName>
        <label>Enrollment Goal - Previous PSEO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enrollment_Goal_TRANSFER__c</fullName>
        <label>Enrollment Goal - TRANSFER</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>High_School_Grad_Year__c</fullName>
        <label>High School Grad Year</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
                <value>
                    <fullName>2031</fullName>
                </value>
                <value>
                    <fullName>2032</fullName>
                </value>
                <value>
                    <fullName>2033</fullName>
                </value>
                <value>
                    <fullName>2034</fullName>
                </value>
                <value>
                    <fullName>2035</fullName>
                </value>
                <value>
                    <fullName>2036</fullName>
                </value>
                <value>
                    <fullName>2037</fullName>
                </value>
                <value>
                    <fullName>2038</fullName>
                </value>
                <value>
                    <fullName>2039</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inquired_goal_NEW__c</fullName>
        <formula>Enrollment_Goal_NEW__c / Inquired_yield_rate_NEW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inquired goal - NEW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inquired_goal_PSEO__c</fullName>
        <formula>Enrollment_Goal_PSEO__c / Inquired_yield_rate_PSEO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inquired goal - PSEO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inquired_goal_Prev_PSEO__c</fullName>
        <formula>Enrollment_Goal_Prev_PSEO__c / Inquired_yield_rate_Prev_PSEO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inquired goal - Previous PSEO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inquired_goal_TRANSFER__c</fullName>
        <formula>Enrollment_Goal_TRANSFER__c / Inquired_yield_rate_TRANSFER__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inquired goal - TRANSFER</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inquired_yield_rate_NEW__c</fullName>
        <label>Inquired yield rate - NEW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Inquired_yield_rate_PSEO__c</fullName>
        <label>Inquired yield rate - PSEO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Inquired_yield_rate_Prev_PSEO__c</fullName>
        <label>Inquired yield rate - Previous PSEO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Inquired_yield_rate_TRANSFER__c</fullName>
        <label>Inquired yield rate - TRANSFER</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Term_Code__c</fullName>
        <label>Term Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Description__c</fullName>
        <label>Term Description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Status__c</fullName>
        <label>Term Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Terms</relationshipLabel>
        <relationshipName>Terms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>hed__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Grading_Period_Sequence__c</fullName>
        <description>Such as 1 for the first six week, 2 for the second six weeks, etc.</description>
        <label>Grading Period Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Instructional_Days__c</fullName>
        <description>The total number of instructional days in this term</description>
        <label>Instructional Days</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Parent_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to group terms together, such as 1st Quarter of 1st Semester of School Year.</description>
        <label>Parent Term</label>
        <referenceTo>hed__Term__c</referenceTo>
        <relationshipLabel>Terms</relationshipLabel>
        <relationshipName>Terms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Type__c</fullName>
        <description>The type of term being configured.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Semester</fullName>
                </value>
                <value>
                    <fullName>School Year</fullName>
                </value>
                <value>
                    <fullName>Part of Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Term</label>
    <listViews>
        <fullName>hed__All</fullName>
        <columns>NAME</columns>
        <columns>Term_Code__c</columns>
        <columns>Term_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Term Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>